--- a/movienow-frontend/package.json
+++ b/movienow-frontend/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "flowbite": "^3.1.2",
+    "flowbite-datepicker": "^1.3.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-datepicker": "^8.7.0",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
