Update Dockerfile and nginx configuration for API proxying; modify docker-compose to use /api endpoint

--- a/movienow-frontend/nginx/frontend.conf
+++ b/movienow-frontend/nginx/frontend.conf
@@ -11,13 +11,15 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
     # Proxy pass para las peticiones de API al backend
+    # Mapea /api/* -> http://backend:8080/* (elimina el prefijo /api)
     # Nota: Requiere que el contenedor esté en la misma red que el backend
     location /api/ {
-        # Usar resolver de Docker para resolución dinámica
-        resolver 127.0.0.11 valid=30s;
-        set $backend_upstream http://backend:8080;
-        
-        proxy_pass $backend_upstream/;
+        # En configuración estática de upstream, no usar variable en proxy_pass
+        # para preservar correctamente el URI (ver docs de nginx con variables)
+        proxy_pass http://backend:8080/;
+        # Evitar que el backend aplique CORS (el navegador ya es same-origin con Nginx)
+        # Eliminamos el header Origin al reenviar la petición al backend
+        proxy_set_header Origin "";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
