--- a/movienow-frontend/Dockerfile
+++ b/movienow-frontend/Dockerfile
@@ -27,8 +27,8 @@ FROM nginx:alpine
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy nginx configuration (includes /api proxy to backend service)
+COPY nginx/frontend.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
