--- a/movienow-frontend/docker-compose.yml
+++ b/movienow-frontend/docker-compose.yml
@@ -4,9 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        # API URL that the browser will use to connect to the backend
-        # Use localhost:8080 since the browser runs on the host machine
-        VITE_API_BACK_URL: http://localhost:8080
+        # API URL the browser will call. Using "/api" lets Nginx proxy to the backend service and avoids CORS.
+        VITE_API_BACK_URL: /api
     container_name: movienow-frontend
     ports:
       - "3000:80"
