--- a/movienow-frontend/Dockerfile
+++ b/movienow-frontend/Dockerfile
@@ -1,17 +1,16 @@
-FROM node:20-alpine
-
+FROM node:20-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm ci
-
 COPY . .
 
-ARG VITE_API_BACK_URL
-ENV VITE_API_BACK_URL=$VITE_API_BACK_URL
+
+ENV VITE_API_BACK_URL=http://56.126.34.83:8080
 
 RUN npm run build
 
-EXPOSE 3000
-
-CMD ["npm", "run", "preview", "--", "--host", "--port", "3000"]
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx/frontend.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
